Encode access token ID in refresh token string
This commit changes the format of a refresh token (from the ES token
service) so that it has the access token id embedded within it.

Because the document id is based on the access token id, having the
access token id in the refresh token means that we can retrieve the
document by id (real time get) rather than needing to search for it.

This means that token refresh can avoid needing to deal with potential
search latency issues, and rely exclusively on real time get